axum-macros/tests/typed_path/fail/route_not_starting_with_slash.rs
use axum_extra::routing::TypedPath;

#[derive(TypedPath)]
#[typed_path("")]
struct MyPath;

fn main() {}
